# mygpt

./: .gitignore  README.md  bpe_tokenizer.pkl  bpe_tokenizer_wiki_1024.pkl  example_output.txt  models.py  pyproject.toml  ruff.toml  train.py
data/: download_bncsplitwordscorpus.sh  download_data.sh  download_wiki.py
models/: base_language_model.py  bigram.py  dynamic_tanh.py  gpt.py  positional_encoding.py  recurrent.py  relu2.py  transformer.py  transformer_v2.py  transformer_vanilla.py
optimizer/: muon.py  newton_schulz.py
tokenizers/: base_tokenizer.py  byte_pair_tokenizer.py  char_tokenizer.py
